Bugfix expand/collapse all buttons visible in light mode.

--- a/content_blocks/static/content_blocks/css/content_blocks.css
+++ b/content_blocks/static/content_blocks/css/content_blocks.css
@@ -304,6 +304,15 @@ CONTROLS
 	padding-top:0;
 }
 
+@media (prefers-color-scheme: light) {
+	.wrapper-controls button {
+		color: var(--link-fg);
+	}
+}
+html[data-theme="light"] .wrapper-controls button {
+	color: var(--link-fg);
+}
+
 /*
 -------------------------------------
 TITLE BAR
